examples/semantics/errors/error17.grace
fun error17 () : nothing
	fun foo(c:char) :int;
	fun foo(c:char): int
	{
		puti(8);
	}
{
	puti(9);
}
